Fix headings on both bulk ingest modals
bootstrap help header had a big space above the header
file picker modal had a big space above the close button

made file picker styled more like boostrap modal for consistency

--- a/app/assets/stylesheets/components/bulk_ingest.scss
+++ b/app/assets/stylesheets/components/bulk_ingest.scss
@@ -38,3 +38,7 @@ ul.multivolume {
     }
   }
 }
+
+#bulk-structure-example-modal .modal-title {
+  margin-top: 0;
+}
